[project]
name = "bo4mobbenchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bencherscaffold>=0.3.1,<0.4",
    "bo4mob",
    "pandas>=2.2.3",
    "torch==2.6.0",
]

[project.scripts]
start-benchmark-service = "bo4mobbenchmark.main:serve"

[tool.uv.sources]
bo4mob = { git = "https://github.com/lpapenme/BO4Mob.git" }
torch = { index = "torch" }

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
