[project]
name = "ebobenchmarks"
version = "0.1.0"
description = ""
authors = [{ name = "Leonard Papenmeier", email = "leonard.papenmeier@gmail.com" }]
requires-python = "~=3.8.0"
readme = "README.md"
dependencies = [
    "ebo",
    "bencherscaffold>=0.3.1,<0.4",
    "numpy>=1.20.1,<2",
]

[project.scripts]
start-benchmark-service = "ebobenchmarks.main:serve"

[tool.uv]

[tool.uv.sources]
ebo = { git = "https://github.com/LeoIV/Ensemble-Bayesian-Optimization.git" }

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"