[project]
name = "iohbenchmarks"
version = "0.1.0"
description = ""
authors = [{ name = "Leonard Papenmeier", email = "leonard.papenmeier@posteo.de" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "ioh (>=0.3.18,<0.4.0)",
    "bencherscaffold (>=0.3.2,<0.4.0)",
]
packages = [{ include = "iohbenchmarks" }]

[project.scripts]
start-benchmark-service = "iohbenchmarks.main:serve"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
