[project]
name = "lassobenchmarks"
version = "0.1.0"
description = ""
authors = [{ name = "Leonard Papenmeier", email = "leonard.papenmeier@gmail.com" }]
requires-python = "~=3.10.0"
readme = "README.md"
dependencies = [
    "bencherscaffold~=0.4.0",
    "LassoBench",
    "gpy==1.13.2",
    "torch>=2.2.0,<3",
    "setuptools>=78.1.0,<79",
    "celer==0.7.4",
]

[project.scripts]
start-benchmark-service = "lassobenchmarks.main:serve"

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
LassoBench = { git = "https://github.com/ksehic/LassoBench.git" }
torch = { index = "torch" }

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
