[project]
name = "maxsatbenchmarks"
version = "0.1.0"
description = ""
authors = [{ name = "Leonard Papenmeier", email = "leonard.papenmeier@gmail.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "bencherscaffold~=0.4.0",
    "numpy>=1.26.4,<2",
    "requests>=2.31.0,<3",
]

[project.scripts]
start-benchmark-service = "maxsatbenchmarks.main:serve"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
