[project]
name = "mujocobenchmarks"
version = "0.1.0"
description = ""
authors = [{ name = "Leonard Papenmeier", email = "leonard.papenmeier@gmail.com" }]
requires-python = "~=3.8.0"
readme = "README.md"
dependencies = [
    "bencherscaffold>=0.3.1,<0.4",
    "mujoco-py==2.1.2.14",
    "mujoco==2.2.2",
    "gym>=0.24,<0.25",
    "numpy>=1.20.1,<2",
    "box2d>=2.3.10,<3",
    "box2d-py>=2.3.8,<3",
]

[project.scripts]
start-benchmark-service = "mujocobenchmarks.main:serve"

[tool.uv]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"