[project]
name = "svmbenchmarks"
version = "0.1.0"
description = ""
authors = [{ name = "Leonard Papenmeier", email = "leonard.papenmeier@gmail.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "bencherscaffold>=0.3.1,<0.4",
    "numpy>=1.26.4,<2",
    "requests>=2.31.0,<3",
    "scikit-learn>=1.4.0,<2",
    "xgboost>=3.0.1,<4",
]

[project.scripts]
start-benchmark-service = "svmbenchmarks.main:serve"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
